<resources>
    <string name="app_name">RecordingDeneme2</string>
    <string name="recordButtonDefault">Record</string>
    <string name="xDefault">None</string>
    <string name="yDefault">None</string>
    <string name="zDefault">None</string>
    <string name="timeDefault">0.0</string>
    <string name="title_activity_train">TrainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>