<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/recordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="224dp"
        android:clickable="true"
        android:onClick="startStopRecording"
        android:text="@string/recordButtonDefault"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewX"
        android:layout_width="109dp"
        android:layout_height="30dp"
        android:text="@string/xDefault"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="53dp" />

    <TextView
        android:id="@+id/textViewY"
        android:layout_width="109dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/yDefault"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewX" />

    <TextView
        android:id="@+id/textViewZ"
        android:layout_width="109dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/zDefault"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewY" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="109dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="200dp"
        android:text="@string/timeDefault"
        app:layout_constraintBottom_toTopOf="@+id/recordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewZ" />
</androidx.constraintlayout.widget.ConstraintLayout>